--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
     </footer>
 
     <!-- BACKDROP WITH MODAL WINDOW -->
-    <!--
+  
     <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
@@ -783,7 +783,7 @@
         </form>
       </div>
     </div>
-    -->
+  
 
     <!--MOBILE MENU is-open-->
     <div class="container-mobile-menu">
@@ -992,8 +992,10 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
+              <span>
               I accept the terms and conditions of the
               <a class="review-form-privacy" href="">Privacy Policy</a>
+            </span>
             </label>
           </div>
           <button class="review-form-submit" type="submit">Send</button>
