--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       </div>
     </footer>
 
-    <!-- BACKDROP WITH MODAL WINDOW -->
+    <!-- BACKDROP WITH MODAL WINDOW --->
 
     <div class="backdrop">
       <div class="modal">
