images path revert

--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/bankingapp.jpg                       360w,
-                    /images/desctop2x/dbankingapp@2x.jpg         720w,
-                    /images/images-tablet/tbankingapp.jpg        356w,
-                    /images/images-tablet/tbankingapp@2x.jpg     712w,
-                    /images/images-mobile/mbankingapp.jpg        288w,
-                    /images/images-mobile/mbankingapp@2x-min.jpg 576w
+                    images/bankingapp.jpg                       360w,
+                    images/desctop2x/dbankingapp@2x.jpg         720w,
+                    images/images-tablet/tbankingapp.jpg        356w,
+                    images/images-tablet/tbankingapp@2x.jpg     712w,
+                    images/images-mobile/mbankingapp.jpg        288w,
+                    images/images-mobile/mbankingapp@2x-min.jpg 576w
                   "
                   sizes=" (min-width: 1158px) 360px,
                           (min-width: 768px) 356px, 
@@ -426,12 +426,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/cashlesspayment.jpg                       360w,
-                    /images/desctop2x/dcashlesspayment@2x.jpg         720w,
-                    /images/images-tablet/tcashlesspayment.jpg        356w,
-                    /images/images-tablet/tcashlesspayment@2x.jpg     712w,
-                    /images/images-mobile/mcashlesspayment.jpg        288w,
-                    /images/images-mobile/mcashlesspayment@2x-min.jpg 576w
+                    images/cashlesspayment.jpg                       360w,
+                    images/desctop2x/dcashlesspayment@2x.jpg         720w,
+                    images/images-tablet/tcashlesspayment.jpg        356w,
+                    images/images-tablet/tcashlesspayment@2x.jpg     712w,
+                    images/images-mobile/mcashlesspayment.jpg        288w,
+                    images/images-mobile/mcashlesspayment@2x-min.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px,(min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/cashlesspayment.jpg"
@@ -453,12 +453,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/meditationapp.jpg                       360w,
-                    /images/desctop2x/dmeditationapp@2x.jpg         720w,
-                    /images/images-tablet/tmeditationapp.jpg        356w,
-                    /images/images-tablet/tmeditationapp@2x.jpg     712w,
-                    /images/images-mobile/mmeditationapp.jpg        288w,
-                    /images/images-mobile/mmeditationapp@2x-min.jpg 576w
+                    images/meditationapp.jpg                       360w,
+                    images/desctop2x/dmeditationapp@2x.jpg         720w,
+                    images/images-tablet/tmeditationapp.jpg        356w,
+                    images/images-tablet/tmeditationapp@2x.jpg     712w,
+                    images/images-mobile/mmeditationapp.jpg        288w,
+                    images/images-mobile/mmeditationapp@2x-min.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px,(min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/meditationapp.jpg"
@@ -479,12 +479,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/taxiservice.jpg                       360w,
-                    /images/desctop2x/dtaxiservice@2x.jpg         720w,
-                    /images/images-tablet/ttaxiservice.jpg        356w,
-                    /images/images-tablet/ttaxiservice@2x.jpg     712w,
-                    /images/images-mobile/mtaxiservice.jpg        288w,
-                    /images/images-mobile/mtaxiservice@2x-min.jpg 576w
+                    images/taxiservice.jpg                       360w,
+                    images/desctop2x/dtaxiservice@2x.jpg         720w,
+                    images/images-tablet/ttaxiservice.jpg        356w,
+                    images/images-tablet/ttaxiservice@2x.jpg     712w,
+                    images/images-mobile/mtaxiservice.jpg        288w,
+                    images/images-mobile/mtaxiservice@2x-min.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px,(min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/taxiservice.jpg"
@@ -505,12 +505,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/screenillustrations.jpg                       360w,
-                    /images/desctop2x/dscreenillustrations@2x.jpg         720w,
-                    /images/images-tablet/tscreenillustrations.jpg        356w,
-                    /images/images-tablet/tscreenillustrations@2x.jpg     712w,
-                    /images/images-mobile/mscreenillustrations.jpg        288w,
-                    /images/images-mobile/mscreenillustrations@2x-min.jpg 576w
+                    images/screenillustrations.jpg                       360w,
+                    images/desctop2x/dscreenillustrations@2x.jpg         720w,
+                    images/images-tablet/tscreenillustrations.jpg        356w,
+                    images/images-tablet/tscreenillustrations@2x.jpg     712w,
+                    images/images-mobile/mscreenillustrations.jpg        288w,
+                    images/images-mobile/mscreenillustrations@2x-min.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px,(min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/screenillustrations.jpg"
@@ -531,12 +531,12 @@
               <div class="portfolio-dark">
                 <img
                   srcset="
-                    /images/onlinecourses.jpg                       360w,
-                    /images/desctop2x/donlinecourses@2x.jpg         720w,
-                    /images/images-tablet/tonlinecourses.jpg        356w,
-                    /images/images-tablet/tonlinecourses@2x.jpg     712w,
-                    /images/images-mobile/monlinecourses.jpg        288w,
-                    /images/images-mobile/monlinecourses@2x-min.jpg 576w
+                    images/onlinecourses.jpg                       360w,
+                    images/desctop2x/donlinecourses@2x.jpg         720w,
+                    images/images-tablet/tonlinecourses.jpg        356w,
+                    images/images-tablet/tonlinecourses@2x.jpg     712w,
+                    images/images-mobile/monlinecourses.jpg        288w,
+                    images/images-mobile/monlinecourses@2x-min.jpg 576w
                   "
                   sizes="(min-width: 1158px) 360px,(min-width: 768px) 356px, (max-width: 767px) 288px"
                   src="./images/onlinecourses.jpg"
