section hero and team

--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
             <li class="team-list">
               <img
                 class="team-foto"
+                srcset="
+              images/mark.jpg 264w,
+              images/mark2-min.jpg 528w,
+            "
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -200,6 +204,10 @@
             <li class="team-list">
               <img
                 class="team-foto"
+                srcset="
+              images/tom.jpg 264w,
+              images/tom2-min.jpg 528w,
+            "
                 src="./images/tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -263,6 +271,10 @@
             <li class="team-list">
               <img
                 class="team-foto"
+                srcset="
+                images/camila.jpg 264w,
+                images/camila2-min.jpg 528w,
+              "
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -326,6 +338,10 @@
             <li class="team-list">
               <img
                 class="team-foto"
+                srcset="
+                images/daniel.jpg 264w,
+                images/daniel2-min.jpg 528w,
+              "
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -799,7 +815,7 @@
           <li><a class="mobile-menu-contacts" href="">Contacts</a></li>
         </ul>
       </nav>
-
+      <div class="mob-menu-cont-soc">
       <address class="mobile-menu-contacts">
         <ul class="mobile-menu-address">
           <li>
@@ -866,6 +882,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </div>
 
     <!-- END MOBILE MENU-->
