--- a/index.html
+++ b/index.html
@@ -784,8 +784,10 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
+              <span>
               I accept the terms and conditions of the
               <a class="review-form-privacy" href="">Privacy Policy</a>
+            </span>
             </label>
           </div>
           <button class="review-form-submit" type="submit">Send</button>
