hero-section-background-size: cover;

--- a/index.html
+++ b/index.html
@@ -137,10 +137,7 @@
             <li class="team-list">
               <img
                 class="team-foto"
-                srcset="
-              images/mark.jpg 264w,
-              images/mark2-min.jpg 528w,
-            "
+                srcset="images/mark.jpg 264w, images/mark2-min.jpg 528w"
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -204,10 +201,7 @@
             <li class="team-list">
               <img
                 class="team-foto"
-                srcset="
-              images/tom.jpg 264w,
-              images/tom2-min.jpg 528w,
-            "
+                srcset="images/tom.jpg 264w, images/tom2-min.jpg 528w"
                 src="./images/tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -271,10 +265,7 @@
             <li class="team-list">
               <img
                 class="team-foto"
-                srcset="
-                images/camila.jpg 264w,
-                images/camila2-min.jpg 528w,
-              "
+                srcset="images/camila.jpg 264w, images/camila2-min.jpg 528w"
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -338,10 +329,7 @@
             <li class="team-list">
               <img
                 class="team-foto"
-                srcset="
-                images/daniel.jpg 264w,
-                images/daniel2-min.jpg 528w,
-              "
+                srcset="images/daniel.jpg 264w, images/daniel2-min.jpg 528w"
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -785,9 +773,9 @@
                 </svg>
               </span>
               <span>
-              I accept the terms and conditions of the
-              <a class="review-form-privacy" href="">Privacy Policy</a>
-            </span>
+                I accept the terms and conditions of the
+                <a class="review-form-privacy" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="review-form-submit" type="submit">Send</button>
@@ -818,73 +806,73 @@
         </ul>
       </nav>
       <div class="mob-menu-cont-soc">
-      <address class="mobile-menu-contacts">
-        <ul class="mobile-menu-address">
-          <li>
-            <a class="contacts-mob" href="tel:+110001111111">
-              +11 (000) 111-11-11</a
-            >
-          </li>
-          <li>
-            <a class="contacts-email" href="mailto:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
-        </ul>
-      </address>
-      <div class="mobile-soc">
-        <ul class="icon-list-mobile-menu">
-          <li class="icon-social">
-            <a class="footer-media" href="">
-              <svg
-                class="icon footer-list-soc"
-                width="24"
-                height="24"
-                aria-label="instagram"
+        <address class="mobile-menu-contacts">
+          <ul class="mobile-menu-address">
+            <li>
+              <a class="contacts-mob" href="tel:+110001111111">
+                +11 (000) 111-11-11</a
               >
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-social">
-            <a class="footer-media" href="">
-              <svg
-                class="icon footer-list-soc"
-                width="24"
-                height="24"
-                aria-label="twitter"
+            </li>
+            <li>
+              <a class="contacts-email" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
               >
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-social">
-            <a class="footer-media" href="">
-              <svg
-                class="icon footer-list-soc"
-                width="24"
-                height="24"
-                aria-label="facebook"
-              >
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-social">
-            <a class="footer-media" href="">
-              <svg
-                class="icon footer-list-soc"
-                width="24"
-                height="24"
-                aria-label="linkedin"
-              >
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </address>
+        <div class="mobile-soc">
+          <ul class="icon-list-mobile-menu">
+            <li class="icon-social">
+              <a class="footer-media" href="">
+                <svg
+                  class="icon footer-list-soc"
+                  width="24"
+                  height="24"
+                  aria-label="instagram"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a class="footer-media" href="">
+                <svg
+                  class="icon footer-list-soc"
+                  width="24"
+                  height="24"
+                  aria-label="twitter"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a class="footer-media" href="">
+                <svg
+                  class="icon footer-list-soc"
+                  width="24"
+                  height="24"
+                  aria-label="facebook"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a class="footer-media" href="">
+                <svg
+                  class="icon footer-list-soc"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
     </div>
 
     <!-- END MOBILE MENU-->
